--- a/scripts/ci/proxy/nginx-proxy-plain-http.conf
+++ b/scripts/ci/proxy/nginx-proxy-plain-http.conf
@@ -1,5 +1,13 @@
 server {
+	listen 8080 default_server;
+	server_name _;
+
+	return 404;
+}
+
+server {
 	listen 8080;
+	server_name central-proxy.stackrox.local;
 
 	location / {
 		proxy_pass http://central-plaintext.stackrox:80;
