--- a/scripts/ci/proxy/nginx-proxy-tls-multiplexed.conf
+++ b/scripts/ci/proxy/nginx-proxy-tls-multiplexed.conf
@@ -1,5 +1,16 @@
 server {
+	listen 8443 ssl default_server;
+	server_name _;
+
+	ssl_certificate     /run/secrets/tls/tls.crt;
+	ssl_certificate_key /run/secrets/tls/tls.key;
+
+	return 404;
+}
+
+server {
 	listen 8443 ssl http2;
+	server_name central-proxy.stackrox.local;
 
 	ssl_certificate     /run/secrets/tls/tls.crt;
 	ssl_certificate_key /run/secrets/tls/tls.key;
