Index image labels (stackrox/rox#4715)
Parse/index image labels, use those labels in a new policy, fix bugs in predicate matching

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1799,6 +1799,7 @@ jobs:
       - ROX_DIAGNOSTIC_BUNDLE: true
       - ROX_EVENT_TIMELINE_UI: true
       - ROX_SENSOR_DETECTION: true
+      - ROX_REQUIRED_IMAGE_LABEL_POLICY: true
 
     steps:
       - checkout
