Replace rc-tooltip usages with tippy.js based tooltips (stackrox/rox#4844)

--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -72,6 +72,14 @@
                     {
                         "name": "axios",
                         "message": "Please use the axios exported from 'src/services/instance.js' since we've made modifications to it there."
+                    },
+                    {
+                        "name": "tippy.js",
+                        "message": "Existing components 'Tooltip' and 'HoverHint' might cover your use-case. If not, comment the reason of using 'tippy.js' directly."
+                    },
+                    {
+                        "name": "@tippy.js/react",
+                        "message": "Consider using existing components like 'Tooltip' and 'HoverHint' instead, comment the reason if you have to use Tippy directly."
                     }
                 ]
             }
