Fix whitelist resolve test on kernel-module by applying sensor detection (stackrox/rox#4847)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2020,6 +2020,7 @@ jobs:
       - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
       - LOAD_BALANCER: lb
       - ADMISSION_CONTROLLER: true
+      - ROX_SENSOR_DETECTION: true
 
     steps:
       - run-qa-tests:
