--- a/ui/package.json
+++ b/ui/package.json
@@ -83,16 +83,19 @@
         "typeface-open-sans-condensed": "^0.0.72"
     },
     "scripts": {
-        "start": "tailwind build ./src/app.css -o ./src/index.css && HTTPS=true react-scripts start",
+        "start": "yarn tailwind && HTTPS=true react-scripts start",
         "start:watch": "npm-run-all --parallel watch:tailwind watch:react",
-        "build": "tailwind build ./src/app.css -o ./src/index.css && GENERATE_SOURCEMAP=false react-scripts build",
+        "start:coverage": "yarn tailwind && HTTPS=true react-scripts -r @cypress/instrument-cra start",
+        "build": "yarn tailwind && GENERATE_SOURCEMAP=false react-scripts build",
         "test": "react-scripts test --coverage",
         "test-watch": "react-scripts test",
-        "lint": "tailwind build ./src/app.css -o ./src/index.css && NODE_PATH=src eslint src cypress",
+        "lint": "yarn tailwind && NODE_PATH=src eslint src cypress",
         "cypress-open": "./scripts/cypress.sh open",
         "cypress-demo-open": "./scripts/cypress.sh open --config integrationFolder=cypress/demo",
         "test-e2e-local": "./scripts/cypress.sh run",
+        "test-e2e-local:coverage": "CYPRESS_COLLECT_COVERAGE=true yarn test-e2e-local",
         "test-e2e-ci": "./scripts/cypress.sh run --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
+        "test-e2e-ci:coverage": "CYPRESS_COLLECT_COVERAGE=true yarn test-e2e-ci",
         "test-e2e-demo-local": "./scripts/cypress.sh run --config integrationFolder=cypress/demo",
         "test-e2e-demo-ci": "./scripts/cypress.sh run --config integrationFolder=cypress/demo --reporter mocha-multi-reporters --reporter-options configFile=cypress/mocha.config.json",
         "connect": "../scripts/connect-ui.sh ${1}",
@@ -109,6 +112,8 @@
     "devDependencies": {
         "@apollo/react-testing": "^3.1.0",
         "@babel/core": "^7.0.1",
+        "@cypress/code-coverage": "^1.12.2",
+        "@cypress/instrument-cra": "^1.1.0",
         "@storybook/addon-info": "^5.2.1",
         "@storybook/react": "^5.2.1",
         "@tailwindcss/custom-forms": "^0.2.1",
@@ -130,10 +135,12 @@
         "eslint-plugin-react": "^7.11.1",
         "eslint-plugin-react-hooks": "^1.6.0",
         "http-proxy-middleware": "^0.19.1",
+        "istanbul-lib-coverage": "^3.0.0",
         "mocha": "^5.2.0",
         "mocha-junit-reporter": "^1.22.0",
         "mocha-multi-reporters": "^1.1.7",
         "npm-run-all": "^4.1.5",
+        "nyc": "^15.0.0",
         "postcss-cli": "^6.1.3",
         "prettier": "1.15.3",
         "react-router-enzyme-context": "^1.2.0",
