--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
         "events": "^3.1.0",
         "file-saver": "^1.3.8",
         "flat": "^4.1.0",
+        "formik": "^2.1.4",
         "graphql": "^14.3.1",
         "graphql-tag": "^2.10.1",
         "history": "^4.9.0",
@@ -49,7 +50,6 @@
         "react-dom": "^16.12.0",
         "react-dropzone": "^10.2.1",
         "react-feather": "^1.1.6",
-        "react-hook-form": "^4.4.4",
         "react-modal": "^3.6.1",
         "react-numeric-input": "^2.2.3",
         "react-onclickoutside": "^6.8.0",
