--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,3 @@
-defaults: &defaults
-  docker:
-    - image: docker.io/stackrox/apollo-ci:0.2.10
-      auth:
-        username: $DOCKER_IO_PULL_USERNAME
-        password: $DOCKER_IO_PULL_PASSWORD
-  working_directory: /go/src/github.com/stackrox/rox
-
 runOnAllTags: &runOnAllTags
   filters:
     tags:
@@ -462,6 +454,15 @@ updateTestRail: &updateTestRail
     when: always
 
 version: 2.1
+
+executors:
+  custom:
+    docker:
+      - image: docker.io/stackrox/apollo-ci:0.2.10
+        auth:
+          username: $DOCKER_IO_PULL_USERNAME
+          password: $DOCKER_IO_PULL_PASSWORD
+    working_directory: /go/src/github.com/stackrox/rox
 
 commands:
   build-liveness-check:
@@ -1340,11 +1341,8 @@ commands:
         when: always
 
 jobs:
-
-
-
   provision-cluster-k8s-tests:
-    <<: *defaults
+    executor: custom
     steps:
       - checkout
       - check-label-to-skip-tests:
@@ -1354,7 +1352,7 @@ jobs:
           num-nodes: 2
 
   pre-build-ui:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1419,7 +1417,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   pre-build-cli:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1455,7 +1453,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   pre-build-go-binaries:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1491,7 +1489,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   build:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1557,7 +1555,7 @@ jobs:
 
 
   build-rhel:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1608,7 +1606,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   build-deployer:
-    <<: *defaults
+    executor: custom
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
       - EKS_AUTOMATION_VERSION: 0.0.1
@@ -1634,7 +1632,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   build-scale-monitoring-and-mock-server:
-    <<: *defaults
+    executor: custom
     resource_class: large
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
@@ -1668,7 +1666,7 @@ jobs:
       - cleanup-clusters-on-fail
 
   unit-tests:
-    <<: *defaults
+    executor: custom
     resource_class: xlarge
     steps:
       - checkout
@@ -1714,7 +1712,7 @@ jobs:
           when: always
 
   style-checks:
-    <<: *defaults
+    executor: custom
     resource_class: large
     steps:
       - checkout
@@ -1732,7 +1730,7 @@ jobs:
           destination: reports/codenarc
 
   check-generated-files-up-to-date:
-    <<: *defaults
+    executor: custom
     resource_class: large
     steps:
       - checkout
@@ -1763,7 +1761,7 @@ jobs:
             ./scripts/check-todos.sh 'do\s?n.*merge'
 
   integration-unit-tests:
-    <<: *defaults
+    executor: custom
     resource_class: large
     steps:
       - checkout
@@ -1793,7 +1791,7 @@ jobs:
       - *saveGoBuildCache
 
   k8s-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
@@ -2005,7 +2003,7 @@ jobs:
       - *storeUITestCoverage
 
   provision-cluster-qa-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - GCP_IMAGE_TYPE: "COS"
       - POD_SECURITY_POLICIES: "true"
@@ -2020,7 +2018,7 @@ jobs:
 
 
   qa-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - LOCAL_PORT: 443
       - RUNTIME_SUPPORT: ebpf
@@ -2044,7 +2042,7 @@ jobs:
                 label: ci-no-qa-tests
 
   provision-cluster-qa-tests-kernel-module:
-    <<: *defaults
+    executor: custom
 
     steps:
       - checkout
@@ -2054,7 +2052,7 @@ jobs:
           cluster-id: qa-tests-kernel-module
 
   qa-tests-kernel-module:
-    <<: *defaults
+    executor: custom
     environment:
       - LOCAL_PORT: 443
       - RUNTIME_SUPPORT: kernel-module
@@ -2073,7 +2071,7 @@ jobs:
             - *check-qa-tests-kernel-module-label
 
   provision-cluster-upgrade-test:
-    <<: *defaults
+    executor: custom
     steps:
       - checkout
       - check-backend-changes
@@ -2081,7 +2079,7 @@ jobs:
           cluster-id: upgrade-test
 
   upgrade-test:
-    <<: *defaults
+    executor: custom
     environment:
       - STORAGE: pvc
       - LOAD_BALANCER: lb
@@ -2305,7 +2303,7 @@ jobs:
       - teardown-gke
 
   provision-cluster-scale-nightly:
-    <<: *defaults
+    executor: custom
     steps:
       - checkout
       - check-backend-changes
@@ -2313,7 +2311,7 @@ jobs:
           cluster-id: scale-test
 
   provision-cluster-scale:
-    <<: *defaults
+    executor: custom
     steps:
       - checkout
       - check-backend-changes
@@ -2324,7 +2322,7 @@ jobs:
           cluster-id: scale-test
 
   scale-nightly:
-    <<: *defaults
+    executor: custom
     environment:
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
@@ -2390,7 +2388,7 @@ jobs:
       - teardown-gke
 
   scale:
-    <<: *defaults
+    executor: custom
     environment:
       - MONITORING_SUPPORT: true
       - SCANNER_SUPPORT: true
@@ -2476,7 +2474,7 @@ jobs:
           version: 0.6.2
 
   openshift-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - LOCAL_PORT: 8000
       - RUNTIME_SUPPORT: ebpf
@@ -2493,7 +2491,7 @@ jobs:
           version: 0.6.2
 
   openshift-crio-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - LOCAL_PORT: 8000
       - RUNTIME_SUPPORT: ebpf
@@ -2511,7 +2509,7 @@ jobs:
           version: 0.6.2
 
   provision-eks:
-    <<: *defaults
+    executor: custom
     environment:
       - EKS_AUTOMATION_VERSION: 0.0.1
     steps:
@@ -2569,7 +2567,7 @@ jobs:
 
 
   eks-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - EKS_AUTOMATION_VERSION: 0.0.1
       - LOCAL_PORT: 8000
@@ -2737,7 +2735,7 @@ jobs:
 
 
   kops-tests:
-    <<: *defaults
+    executor: custom
     environment:
       - KOPS_AUTOMATION_VERSION: 0.2.6
       - LOCAL_PORT: 8000
@@ -2855,7 +2853,7 @@ jobs:
           when: always
 
   mark-collector-release:
-    <<: *defaults
+    executor: custom
     resource_class: small
     steps:
       - checkout
@@ -2893,7 +2891,7 @@ jobs:
             git push
 
   push-release:
-    <<: *defaults
+    executor: custom
     resource_class: small
     steps:
       - checkout
@@ -3008,7 +3006,7 @@ jobs:
               gsutil cp image/rhel/bundle.tar.gz "gs://dsop-artifacts.stackrox.io/main-rhel/${TAG}/"
 
   scan-images-in-quay:
-      <<: *defaults
+      executor: custom
       resource_class: small
       steps:
         - checkout
@@ -3031,7 +3029,7 @@ jobs:
 
 
   retrigger-master-workflow:
-    <<: *defaults
+    executor: custom
     resource_class: small
     steps:
       - checkout
@@ -3048,7 +3046,7 @@ jobs:
             fi
 
   regenerate-dev-license:
-    <<: *defaults
+    executor: custom
     resource_class: small
     steps:
       - checkout
@@ -3116,7 +3114,7 @@ jobs:
             scripts/ci/create-dev-license-update-pr.sh "roxbot/regenerate-dev-license-${CIRCLE_BUILD_NUM}"
 
   trigger-nightly-build:
-    <<: *defaults
+    executor: custom
     resource_class: small
     steps:
       - checkout
@@ -3151,7 +3149,7 @@ jobs:
             git push origin "$NIGHTLY_TAG"
 
   roxctl-windows-test:
-    <<: *defaults
+    executor: custom
 
     steps:
       - checkout
