--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,9 @@
         "cytoscape-cose-bilkent": "^4.0.0",
         "cytoscape-node-html-label": "^1.1.3",
         "cytoscape-popper": "^1.0.4",
+        "d3-axis": "^1.0.12",
+        "d3-scale": "^3.2.1",
+        "d3-selection": "^1.4.1",
         "date-fns": "1.30.1",
         "deepmerge": "^3.2.0",
         "events": "^3.1.0",
