ROX-4331: Have sensor write admission control configmap (stackrox/rox#4924)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1807,6 +1807,7 @@ jobs:
       - ROX_EVENT_TIMELINE_UI: true
       - ROX_SENSOR_DETECTION: true
       - ROX_REQUIRED_IMAGE_LABEL_POLICY: true
+      - ROX_ADMISSION_CONTROL_SERVICE: true
 
     steps:
       - checkout
