ROX-4324: Add admission control binary (stackrox/rox#4947)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1479,6 +1479,7 @@ jobs:
             - bin/linux/central
             - bin/linux/migrator
             - bin/linux/kubernetes
+            - bin/linux/admission-control
             - bin/linux/upgrader
             - bin/linux/collection
             - image/docs # This will go into the image as generated docs.
