--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -32,6 +32,7 @@ COPY ./bin/compliance /stackrox/bin/
 COPY ./bin/roxctl* /assets/downloads/cli/
 COPY ./bin/kubernetes-sensor /stackrox/bin/
 COPY ./bin/sensor-upgrader /stackrox/bin/
+COPY ./bin/admission-control /stackrox/bin/
 COPY ./static-bin/* /stackrox/
 COPY ./ui/build /ui/
 COPY --from=data /stackrox-data.tgze /stackrox/
