ROX-4354 update rox to UBI8 (stackrox/rox#4972)
Update RHEL base images to UBI8.1

--- a/image/rhel/Dockerfile
+++ b/image/rhel/Dockerfile
@@ -1,6 +1,6 @@
 ARG BASE_REGISTRY=registry.access.redhat.com
-ARG BASE_IMAGE=ubi7/ubi
-ARG BASE_TAG=7.7
+ARG BASE_IMAGE=ubi8/ubi
+ARG BASE_TAG=8.1
 
 FROM ${BASE_REGISTRY}/${BASE_IMAGE}:${BASE_TAG}
 
@@ -14,12 +14,12 @@ RUN yum update -y --nogpgcheck --disableplugin=subscription-manager && \
       rpm \
       rpm-build-libs \
       rpm-libs \
-      rpm-python \
+      python3-rpm \
       subscription-manager \
-      subscription-manager-rhsm \
+      python3-subscription-manager-rhsm \
       yum \
-      yum-plugin-ovl \
-      yum-utils \
+      $(rpm -qa *dnf*) \
+      python3-hawkey \
     ;
 
 ADD bundle.tar.gz /
