--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
         "cytoscape-node-html-label": "^1.1.3",
         "cytoscape-popper": "^1.0.4",
         "d3-axis": "^1.0.12",
+        "d3-brush": "^1.1.5",
         "d3-scale": "^3.2.1",
         "d3-selection": "^1.4.1",
         "date-fns": "1.30.1",
