--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2036,6 +2036,7 @@ jobs:
       - ROX_DIAGNOSTIC_BUNDLE: true
       - ROX_SENSOR_DETECTION: true
       - ROX_ADMISSION_CONTROL_SERVICE: true
+      - ROX_POD_DEPLOY_SEPARATE: true
 
     steps:
       - run-qa-tests:
