--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -514,6 +514,43 @@ commands:
                     fi
                   fi
 
+  check-master-or-tag-or-label:
+    description: "If run-on-master is set, run on master.  If run-on-tags is set, run on all tags.  If the label is set, run when the label is present.  Otherwise skip."
+    parameters:
+      label:
+        type: string
+      run-on-master:
+        type: boolean
+      run-on-tags:
+        type: boolean
+    steps:
+      - when:
+          condition: << parameters.label >>
+          steps:
+            - run:
+                name: Determine whether to run tests
+                command: |
+                  set +e
+                  halt=1
+                  if [[ "<< parameters.run-on-master >>" == "true" && "${CIRCLE_BRANCH}" == "master" ]]; then
+                    echo "Running tests because we are on master"
+                    halt=0
+                  elif [[ "<< parameters.run-on-tags >>" == "true" && -n "${CIRCLE_TAG}" ]]; then
+                    echo "Running tests because this is a tagged build"
+                    halt=0
+                  elif [[ -n "<< parameters.label >>" ]]; then
+                    .circleci/pr_has_label.sh "<< parameters.label >>"
+                    if [[ $? -eq 0 ]]; then
+                      echo "Running tests because the label << parameters.label >> has been set"
+                      halt=0
+                    fi
+                  fi
+
+                  if [[ "${halt}" -eq 1 ]]; then
+                    echo "Not running tests"
+                    circleci step halt
+                  fi
+
   get-and-store-debug-dump:
     description: Runs roxctl debug dump and stores it for the job.
     steps:
@@ -563,6 +600,10 @@ commands:
         type: boolean
         default: true
 
+      use-main-rhel:
+        type: boolean
+        default: false
+
     steps:
       - run:
           name: Setup deployment env
@@ -574,7 +615,7 @@ commands:
             cci-export REGISTRY_PASSWORD "$DOCKER_IO_PULL_PASSWORD"
             cci-export MAIN_IMAGE_TAG "$(make --quiet tag)"
             cci-export GOOGLE_APPLICATION_CREDENTIALS /tmp/gcp.json
-            if .circleci/pr_has_label.sh ci-run-against-rhel; then
+            if [[ "<< parameters.use-main-rhel >>" == "true" ]]; then
               cci-export MAIN_IMAGE_REPO stackrox/main-rhel
               cci-export COLLECTOR_IMAGE_REPO stackrox/collector-rhel
               cci-export SCANNER_IMAGE "stackrox/scanner-rhel:$(cat "$(git rev-parse --show-toplevel)/SCANNER_VERSION")"
@@ -854,6 +895,10 @@ commands:
       determine-whether-to-run:
         type: steps
 
+      use-main-rhel:
+        type: boolean
+        default: false
+
     steps:
       - checkout
       - check-backend-changes
@@ -867,7 +912,8 @@ commands:
 
       - *setupRoxctl
       - setup-gcp
-      - setup-dep-env
+      - setup-dep-env:
+          use-main-rhel: << parameters.use-main-rhel >>
       - attach-gke-cluster:
           cluster-id: << parameters.cluster-id >>
       - remove-existing-stackrox-resources
@@ -1081,6 +1127,9 @@ commands:
         enum: ["lite", "multi"]
       version:
         type: string
+      use-main-rhel:
+        type: boolean
+        default: false
 
     steps:
       - checkout
@@ -1139,7 +1188,7 @@ commands:
             cci-export MAIN_IMAGE_TAG "$(make --quiet tag)"
             cci-export REGISTRY_PASSWORD "$DOCKER_IO_PULL_PASSWORD"
             cci-export REGISTRY_USERNAME "$DOCKER_IO_PULL_USERNAME"
-            if .circleci/pr_has_label.sh ci-run-against-rhel; then
+            if [[ "<< parameters.use-main-rhel >>" == "true" ]]; then
               cci-export MAIN_IMAGE_REPO stackrox/main-rhel
               cci-export COLLECTOR_IMAGE_REPO stackrox/collector-rhel
               cci-export SCANNER_IMAGE "stackrox/scanner-rhel:$(cat "$(git rev-parse --show-toplevel)/SCANNER_VERSION")"
@@ -2020,6 +2069,39 @@ jobs:
           cluster-id: qa-tests
 
 
+  provision-openshift-cluster-qa-tests-rhel:
+    executor: custom
+    environment:
+      - GCP_IMAGE_TYPE: "COS"
+      - POD_SECURITY_POLICIES: "true"
+    steps:
+      - check-master-or-tag-or-label:
+          label: ci-run-against-rhel
+          run-on-master: false
+          run-on-tags: true
+
+      - provision-openshift-cluster:
+          crio: false
+          flavor: lite
+          gate-label: ci-openshift-rhel-tests
+          version: 0.6.2
+
+  provision-kubernetes-cluster-qa-tests-rhel:
+    executor: custom
+    environment:
+      - GCP_IMAGE_TYPE: "COS"
+      - POD_SECURITY_POLICIES: "true"
+    steps:
+      - checkout
+      - check-backend-changes
+      - check-master-or-tag-or-label:
+          label: ci-run-against-rhel
+          run-on-master: false
+          run-on-tags: true
+
+      - provision-gke-cluster:
+          cluster-id: ci-kubernetes-rhel-tests
+
   qa-tests:
     executor: custom
     environment:
@@ -2045,6 +2127,57 @@ jobs:
           determine-whether-to-run:
             - check-label-to-skip-tests:
                 label: ci-no-qa-tests
+
+  openshift-qa-tests-rhel:
+    executor: custom
+    environment:
+      - LOCAL_PORT: 8000
+      - RUNTIME_SUPPORT: ebpf
+      - MONITORING_SUPPORT: true
+      - SCANNER_SUPPORT: true
+      - INFLUXDB_URL: "https://influxdb.monitoring.ci.rox.systems"
+      - ROX_WHITELIST_GENERATION_DURATION: 1m
+      - ROX_SENSOR_DETECTION: true
+
+    steps:
+      - check-master-or-tag-or-label:
+          label: ci-run-against-rhel
+          run-on-master: false
+          run-on-tags: true
+      - run-openshift-tests:
+          gate-label: ci-openshift-rhel-tests
+          flavor: lite
+          version: 0.6.2
+          use-main-rhel: true
+
+  qa-tests-rhel:
+    executor: custom
+    environment:
+      - LOCAL_PORT: 443
+      - RUNTIME_SUPPORT: ebpf
+      - GCP_IMAGE_TYPE: "COS"
+      - MONITORING_SUPPORT: true
+      - SCANNER_SUPPORT: true
+      - ROX_WHITELIST_GENERATION_DURATION: 1m
+      - INFLUXDB_URL: "http://monitoring-1.us-central1-c.c.stackrox-ci.internal:8086"
+      - LOAD_BALANCER: lb
+      - ADMISSION_CONTROLLER: true
+      - ROX_BADGER_DB: true
+      - ROX_TELEMETRY: true
+      - ROX_DIAGNOSTIC_BUNDLE: true
+      - ROX_SENSOR_DETECTION: true
+      - ROX_ADMISSION_CONTROL_SERVICE: true
+      - ROX_POD_DEPLOY_SEPARATE: true
+
+    steps:
+      - run-qa-tests:
+          cluster-id: ci-kubernetes-rhel-tests
+          determine-whether-to-run:
+            - check-master-or-tag-or-label:
+                label: ci-run-against-rhel
+                run-on-master: false
+                run-on-tags: true
+          use-main-rhel: true
 
   provision-cluster-qa-tests-kernel-module:
     executor: custom
@@ -2181,11 +2314,7 @@ jobs:
       - run:
           name: Do the upgrade
           command: |
-            if .circleci/pr_has_label.sh ci-run-against-rhel; then
-              new_image="stackrox/main-rhel:$(make --quiet tag)"
-            else
-              new_image="stackrox/main:$(make --quiet tag)"
-            fi
+            new_image="stackrox/main:$(make --quiet tag)"
 
             kubectl -n stackrox set image deploy/central central=${new_image}
             kubectl -n stackrox describe deploy/central
@@ -3228,7 +3357,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-cluster-k8s-tests
       - provision-cluster-qa-tests:
@@ -3237,7 +3365,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-cluster-qa-tests
       - provision-cluster-qa-tests-kernel-module:
@@ -3246,7 +3373,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-cluster-qa-tests-kernel-module
       - provision-cluster-upgrade-test:
@@ -3255,7 +3381,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-cluster-upgrade-test
       - provision-cluster-scale:
@@ -3264,7 +3389,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-cluster-scale
       - provision-openshift:
@@ -3275,14 +3399,12 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-openshift
       - openshift-crio-tests:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-openshift-crio
       - provision-eks:
@@ -3291,7 +3413,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-eks
       - provision-kops:
@@ -3300,7 +3421,6 @@ workflows:
           <<: *runOnAllTagsWithDockerIOPullCtx
           requires:
             - build
-            - build-rhel
             - build-scale-monitoring-and-mock-server
             - provision-kops
       - roxctl-windows-test:
@@ -3314,6 +3434,22 @@ workflows:
             - build
             - unit-tests
             - push-release
+      - provision-openshift-cluster-qa-tests-rhel:
+          <<: *runOnAllTagsWithDockerIOPullCtx
+      - openshift-qa-tests-rhel:
+          <<: *runOnAllTagsWithDockerIOPullCtx
+          requires:
+            - build-rhel
+            - build-scale-monitoring-and-mock-server
+            - provision-openshift-cluster-qa-tests-rhel
+      - provision-kubernetes-cluster-qa-tests-rhel:
+          <<: *runOnAllTagsWithDockerIOPullCtx
+      - qa-tests-rhel:
+          <<: *runOnAllTagsWithDockerIOPullCtx
+          requires:
+            - build-rhel
+            - build-scale-monitoring-and-mock-server
+            - provision-kubernetes-cluster-qa-tests-rhel
 
       - push-release:
           <<: *runOnlyOnReleaseBuilds
