--- a/image/templates/kubernetes/helm/centralchart/templates/configmap.yaml
+++ b/image/templates/kubernetes/helm/centralchart/templates/configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 data:
   central-config.yaml: |-
     maintenance:
+      safeMode: false # When set to true, Central will sleep forever on the next restart
       compaction:
         enabled: true
         bucketFillFraction: .5 # This controls how densely to compact the buckets. Usually not advised to modify
